2011-03-28  Ofri Wolfus  <ofri@google.com>

Reviewed by Eric Seidel.

        RTL: Select elements with a size attribute are always left aligned.
        https://bugs.webkit.org/show_bug.cgi?id=50928

        Added support for alignment in RenderListBox.

        * fast/forms/listbox-bidi-align.html: Added.
        * platform/mac/fast/forms/listbox-bidi-align-expected.checksum: Added.
        * platform/mac/fast/forms/listbox-bidi-align-expected.png: Added.
        * platform/mac/fast/forms/listbox-bidi-align-expected.txt: Added.
        * platform/mac/fast/text/drawBidiText-expected.checksum: Updated.
        * platform/mac/fast/text/drawBidiText-expected.png: Updated.
2011-03-28  Ofri Wolfus  <ofri@google.com>

        Reviewed by Eric Seidel.

        RTL: Select elements with a size attribute are always left aligned.
        https://bugs.webkit.org/show_bug.cgi?id=50928

        Added support for alignment in RenderListBox.

        Test: fast/forms/listbox-bidi-align.html

        * rendering/RenderListBox.cpp:
        (WebCore::itemOffsetForAlignment):
        (WebCore::RenderListBox::paintItemForeground): Add support for alignment and directionality.

Canonical link: https://commits.webkit.org/72002@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82200 268f45cc-cd09-0410-ab3c-d52691b4dbfc